crates/aura-macros/tests/boundaries/weak_identifier_missing_domain.rs
#[aura_macros::weak_identifier]
struct MissingDomain;

fn main() {}
